Test/dafny0/DisplayExpressions.dfy.expect
DisplayExpressions.dfy(5,6): Error: the type of this variable is underspecified
DisplayExpressions.dfy(10,6): Error: the type of this variable is underspecified
DisplayExpressions.dfy(15,6): Error: the type of this variable is underspecified
DisplayExpressions.dfy(20,6): Error: the type of this variable is underspecified
DisplayExpressions.dfy(25,12): Error: the type of this expression is underspecified
DisplayExpressions.dfy(25,29): Error: the type of this expression is underspecified
6 resolution/type errors detected in DisplayExpressions.dfy
